Switch to BrokerNotAvailable instead of UnknownServer
Signed-off-by: Sam Barker <sbarker@redhat.com>

rh-pre-commit.version: 2.0.1
rh-pre-commit.check-secrets: ENABLED

Signed-off-by: Sam Barker <sbarker@redhat.com>